<resources>
    <string name="app_name">TenQ</string>
    <string name="com_spotify_sdk_redirect_scheme">compostpctenq</string>
    <string name="com_spotify_sdk_redirect_host">spotifycallback</string>
    <string name="code">Code: %1$s</string>
    <string name="token">Access Token: %1$s</string>
    <string name="aria_logo">TenQ Logo</string>
    <string name="aria_room_indicator">Room Indicator</string>
    <string name="aria_create_room">Create room</string>
    <string name="aria_scan_qr">Scan QR</string>
    <string name="aria_join_with_id">Join with ID</string>
    <string name="hint_room_name">Room name</string>
    <string name="txt_create_new_room">Create new room</string>
    <string name="txt_close_room">Close this room?</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_big">CANCEL</string>
    <string name="create_room">Create Room</string>
    <string name="share_room">Share Room</string>
    <string name="copy_room_link">Copy room link</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="enable_sound_awareness">Enable sound awareness</string>
    <string name="allow_foreign_actions">Allow foreign actions</string>
    <string name="sound_awareness_sub_text">Listen to the room sounds and automatically reduce/increase the bluetooth device volume.</string>
    <string name="sound_awareness_bluetooth_sub_text">-> Has to be connected to a Bluetooth device in order to activate</string>
    <string name="allow_foreign_sub_text">Let users perform delete/reorder actions on songs they didn’t add themselves</string>
    <string name="join">JOIN</string>
    <string name="insert_room_id">Insert Room ID</string>
    <string name="user_list">Users list:</string>
    <string name="add">Add</string>
    <string name="aria_add_song">Add new song</string>
    <string name="aria_export_playlist">Export playlist</string>
    <string name="txt_close_room_red">CLOSE ROOM</string>
    <string name="txt_body_close_room">After closing the room you will not be able to modify the room’s queue or play it again. You will still be able to export the created playlist to Spotify any time.</string>
</resources>