<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.activities.RoomSettingsActivity">


    <Switch
        android:id="@+id/switch_sounds_awareness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_sound_awareness"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        style="@style/settings_title" />

    <TextView
        android:id="@+id/txt_sound_awareness_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sound_awareness_sub_text" />

    <TextView
        android:id="@+id/txt_sound_awareness_bluetooth_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sound_awareness_bluetooth_sub_text"
        android:textSize="14dp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/txt_user_list"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_list"
        style="@style/settings_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_user_names"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>