<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@color/dark_gray"
        android:text="@string/share_room" />


    <ImageView
        android:id="@+id/QrCode"
        android:layout_width="match_parent"
        android:layout_height="234dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="?attr/actionBarDivider" />

    <Button
        android:id="@+id/copy_link"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/copy_room_link"
        android:layout_weight="1"
        android:textSize="@dimen/text_link"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >



        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textSize="@dimen/text_link"
            />





    </LinearLayout>
</LinearLayout>