<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.activities.ExistingRoomsActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_existing_rooms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_existing_room" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_join_with_id"
            style="@style/fab"
            android:backgroundTint="@android:color/white"
            app:tint="@color/black"
            android:contentDescription="@string/aria_join_with_id"
            android:src="@drawable/ic_link" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_scan_qr"
            android:contentDescription="@string/aria_scan_qr"
            android:src="@drawable/ic_qr"
            style="@style/fab"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_create_room"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/aria_create_room"
            android:src="@drawable/ic_add"
            style="@style/fab"
            />
    </LinearLayout>
</RelativeLayout>